Optimize Replenish plugin for large servers and exact crop replanting
- Added centralized ReplantQueue with timing wheel to replace per-block scheduler tasks
  • Prevents task spam and smooths performance under heavy load (1k+ players)
  • Configurable maxReplantsPerTick to cap per-tick work
- Store and replant exact crop Material (wheat, carrots, potatoes, beetroots, nether_wart, cocoa)
  instead of defaulting to wheat
- Removed unsupported Spigot calls (ItemStack#isEmpty, Bukkit#getCurrentTick)
- Eliminated redundant null checks and variable initializers
- Optimized DropPickupManager to avoid unnecessary allocations
- Maintained compatibility with config.yml crop toggles and QoL options
- Updated plugin.yml and config.yml with new maxReplantsPerTick setting